TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/TechSmart_Clients__c.object-meta.xml
<CustomObject>
    <label>TechSmart_Client</label>
    <nameField>
        <label>TechSmart_Client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TechSmart_Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>