TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Assigned_Tech__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Tech</label>
    <referenceTo>Assigned_Tech__c</referenceTo>
    <relationshipLabel>TechSmart_Clients</relationshipLabel>
    <relationshipName>TechSmart_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>