TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact_Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>