TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <label>Project_Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>