TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Support_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Ticket_ID__c</fullName>
    <label>Support_Ticket_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>