TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Ticket_Issue__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Issue__c</fullName>
    <label>Ticket_Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Login Failure</fullName>
            </value>
            <value>
                <fullName>Hardware Failure</fullName>
            </value>
            <value>
                <fullName>Security Breach</fullName>
            </value>
            <value>
                <fullName>Data Loss</fullName>
            </value>
            <value>
                <fullName>Email Issues</fullName>
            </value>
            <value>
                <fullName>Server Downtime</fullName>
            </value>
            <value>
                <fullName>VPN Problems</fullName>
            </value>
            <value>
                <fullName>Cloud Sync Issues</fullName>
            </value>
            <value>
                <fullName>Network Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>