TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/fields/Ticket_Priority__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Priority__c</fullName>
    <label>Ticket_Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>