TechSmart Solutions/force-app/main/default/objects/TechSmart_Clients__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Industry__c</columns>
    <columns>Address__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Role__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>